[package]
name = "test_runner"
version = "1.0.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Juan Mahou"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# toml = "0.5.9"
serde_yaml = "0.9.14"
serde = {version = "1.0.145", features=["derive"]}
clap = {version = "4.0.22", features=["derive"]}
termcolor = "1.1.3"
termsize = "0.1"